apps/base/backstage/virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: backstage-virtualservice
  namespace: backstage
spec:
  gateways:
    - istio-ingress/wildcard-gateway
  hosts:
    - backstage.${cluster_subdomain}
  http:
    - route:
        - destination:
            host: backstage-server.backstage.svc.cluster.local
            port:
              number: 80
